@@ -1,7 +1,7 @@
-2d0b0102c2bc8e8987279e19a9ad84fe *DESCRIPTION
+a222eac90eedbb803637bbdae1651108 *DESCRIPTION
 d75a56f9e156a34007c4492923b91b9b *NAMESPACE
-88069d65eaf22a7189fa3d9d5f51c145 *NEWS
-1bd502902e0f2f3470992f0742327297 *R/xgrove.R
+7ec707f457ae8fc02bb8fe5ae6b2c21b *NEWS
+f9ad6b456717a19fcd8ebaf34500737e *R/xgrove.R
 2f88d929f679dfc9a304fe7c79a11685 *README.md
 b39bc544cea2cf944e83a02bdae10ef0 *man/figures/logo.png
 88efd8a146c883362f87ce1160be8826 *man/plot.sgtree.Rd
